--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 </head>
 
-<body style="background-color:#EFEFEF">
+<body>
 
 <div id="center">
 
@@ -78,55 +78,55 @@ Articles related to my works:
 		<span class="cvitem"> "Microscopic theory of multi-stage Fermi surface reconstruction in heavy fermion systems with quartet multipolar local moments" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:black">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:black">Yong Baek Kim</a><br>
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:var(--font-color)">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color)">Yong Baek Kim</a><br>
 			<a href="https://arxiv.org/abs/2207.07661">arXiv:2207.07661</a>
 		</li><li><div>
 		<span class="cvitem"> "Non-Fermi liquid behavior and quantum criticality in cubic heavy fermion systems with non-Kramers multipolar local moments" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:black">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:black">Yong Baek Kim</a><br>
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:var(--font-color)">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color">Yong Baek Kim</a><br>
 			<a href="https://arxiv.org/abs/2206.02808">arXiv:2206.02808</a>
 		</li><li><div>
 		<span class="cvitem"> "Non-Fermi liquid induced by Bose metal with protected subsystem symmetries" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> <b><u>SangEun Han</u></b> and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:black">Yong Baek Kim</a><br>
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b> and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color)">Yong Baek Kim</a><br>
 			<a href="https://doi.org/10.1103/PhysRevB.106.L081106">Phys. Rev. B <b>106</b>, L081106 (2022)</a> (<a href="https://arxiv.org/abs/2102.05052">arXiv:2102.05052</a>)
 		</li><li><div>
 		<span class="cvitem"> "Realization of fractonic quantum phases in the breathing pyrochlore lattice" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://scholar.google.com/citations?user=kQnM5s0AAAAJ" style="text-decoration:none;color:black">Adarsh S. Patri</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:black">Yong Baek Kim</a><br>
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://scholar.google.com/citations?user=kQnM5s0AAAAJ" style="text-decoration:none;color:var(--font-color)">Adarsh S. Patri</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color">Yong Baek Kim</a><br>
 			<a href="https://doi.org/10.1103/PhysRevB.105.235120">Phys. Rev. B <b>105</b>, 235120 (2022)</a> (<a href="https://arxiv.org/abs/2109.03835">arXiv:2109.03835</a>)
 		</li><li><div>
 		<span class="cvitem"> "Lattice vibration as a knob for novel quantum criticality: Emergence of supersymmetry from spin-lattice coupling" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="http://www.junhyunlee.org" style="text-decoration:none;color:black">Junhyun Lee<a/>, <a href="https://sites.google.com/view/egmoon/" style="text-decoration:none;color:black">Eun-Gook Moon</a><br>
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="http://www.junhyunlee.org" style="text-decoration:none;color:var(--font-color)">Junhyun Lee<a/>, <a href="https://sites.google.com/view/egmoon/" style="text-decoration:none;color:var(--font-color)">Eun-Gook Moon</a><br>
 			<a href="https://doi.org/10.1103/PhysRevB.103.014435">Phys. Rev. B <b>103</b>, 014435 (2021)</a> (<a href="https://arxiv.org/abs/1911.01435">arXiv:1911.01435</a>)
 		</li><li><div>
 		<span class="cvitem"> "Emergent Anisotropic Non-Fermi Liquid at a Topological Phase Transition in Three Dimensions" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, Changhee Lee, <a href="https://sites.google.com/view/egmoon/" style="text-decoration:none;color:black">Eun-Gook Moon</a>, and <a href="https://physics.snu.ac.kr/hmin/" style="text-decoration:none;color:black">Hongki Min</a><br><a href="https://doi.org/10.1103/PhysRevLett.122.187601">Phys. Rev. Lett. <b>122</b>, 187601 (2019)</a> (<a href="https://arxiv.org/abs/1809.10691">arXiv:1809.10691</a>)</div>
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, Changhee Lee, <a href="https://sites.google.com/view/egmoon/" style="text-decoration:none;color:var(--font-color)">Eun-Gook Moon</a>, and <a href="https://physics.snu.ac.kr/hmin/" style="text-decoration:none;color:var(--font-color)">Hongki Min</a><br><a href="https://doi.org/10.1103/PhysRevLett.122.187601">Phys. Rev. Lett. <b>122</b>, 187601 (2019)</a> (<a href="https://arxiv.org/abs/1809.10691">arXiv:1809.10691</a>)</div>
 <!--		<span id="quicksummary4" style="CURSOR: hand" onclick="if(expla4.style.display=='none') {expla4.style.display='';quicksummary4.innerText='close quick summary'} else {expla4.style.display='none';quicksummary4.innerText='open quick summary'}">open quick summary</span><div id="expla4" style="display: none;"><hr>We find that a novel class of quantum criticality appears at topological phase transition point characterized by emergent anisotropic non-Fermi liquid behaviors which in critical electronic modes and long-range Coulomb interactions are strongly coupled, and the system becomes finitely anisotropic.<hr></div>-->
 		</li><li><div>
 		<span class="cvitem"> "Quantum criticality with infinite anisotropy in topological phase transitions between Dirac and Weyl semimetals" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://sites.google.com/site/gilyoungchogroup/" style="text-decoration:none;color:black">Gil Young Cho</a>, and <a href="https://sites.google.com/view/egmoon/" style="text-decoration:none;color:black">Eun-Gook Moon</a> <br><a href="https://doi.org/10.1103/PhysRevB.98.085149">Phys. Rev. B <b>98</b>, 085149 (2018)</a> (<a href="https://arxiv.org/abs/1804.01547">arXiv:1804.01547</a>)</div>
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://sites.google.com/site/gilyoungchogroup/" style="text-decoration:none;color:var(--font-color)">Gil Young Cho</a>, and <a href="https://sites.google.com/view/egmoon/" style="text-decoration:none;color:var(--font-color)">Eun-Gook Moon</a> <br><a href="https://doi.org/10.1103/PhysRevB.98.085149">Phys. Rev. B <b>98</b>, 085149 (2018)</a> (<a href="https://arxiv.org/abs/1804.01547">arXiv:1804.01547</a>)</div>
 <!--		<span id="quicksummary3" style="CURSOR: hand" onclick="if(expla3.style.display=='none') {expla3.style.display='';quicksummary3.innerText='close quick summary'} else {expla3.style.display='none';quicksummary3.innerText='open quick summary'}">open quick summary</span><div id="expla3" style="display: none;"><hr>We study the quantum phase transitions associated with splitting nodal fermi points, motivated by topological phase transitions between Dirac and Weyl semimetals. We show the presence of weakly coupled quantum criticalities with infinite anisotropy.<hr></div>-->
 		</li><li><div>
 		<span class="cvitem"> "Long-range Coulomb Interaction effects on Topological Phase Transitions between Semi-metals and Insulators" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> <b><u>SangEun Han</u></b> and <a href="https://sites.google.com/view/egmoon/" style="text-decoration:none;color:black">Eun-Gook Moon<a><br><a href="https://doi.org/10.1103/PhysRevB.97.241101">Phys. Rev. B <b>97</b>, 241101(R) (2018)</a> (<a href="https://arxiv.org/abs/1802.05727">arXiv:1802.05727</a>)</div>
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b> and <a href="https://sites.google.com/view/egmoon/" style="text-decoration:none;color:var(--font-color)">Eun-Gook Moon<a><br><a href="https://doi.org/10.1103/PhysRevB.97.241101">Phys. Rev. B <b>97</b>, 241101(R) (2018)</a> (<a href="https://arxiv.org/abs/1802.05727">arXiv:1802.05727</a>)</div>
 <!--		<span id="quicksummary2" style="CURSOR: hand" onclick="if(expla2.style.display=='none') {expla2.style.display='';quicksummary2.innerText='close quick summary'} else {expla2.style.display='none';quicksummary2.innerText='open quick summary'}">open quick summary</span><div id="expla2" style="display: none;"><hr>Chiral symmetry is one of the most fundamental symmetries in nature, which prohibits mass generation of fermions. Remarkable advances in topological matter reveal the chiral symmetry may be realized as lattice symmetries of topological state. A topological phase transition is intrinsically tied to breaking a chiral symmetry. The topological transition, however, is lack of the Lorentz symmetry in contrast to particle physics. In particular, the Coulomb interaction is instantaneous, and it is imperative to understand its effects on chiral symmetry breaking transitions. Thus, we investigate long-range Coulomb interaction effects on topological phase transitions and find striking properties with novel scaling functions.<hr></div>-->
 		</li><li><div>
 		<span class="cvitem"> "Topological Phase Transitions in Line-nodal Superconductors" </span>
 		<span class="cvperiod"></span>
 		</div>
-		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://sites.google.com/site/gilyoungchogroup/" style="text-decoration:none;color:black">Gil Young Cho</a>, and <a href="https://sites.google.com/view/egmoon/" style="text-decoration:none;color:black">Eun-Gook Moon</a><br><a href="https://doi.org/10.1103/PhysRevB.95.094502">Phys. Rev. B <b>95</b>, 094502 (2017)</a> (<a href="https://arxiv.org/abs/1601.00975">arXiv:1601.00975</a>)</div>
+		<div class="cvitemcontent"> <b><u>SangEun Han</u></b>, <a href="https://sites.google.com/site/gilyoungchogroup/" style="text-decoration:none;color:var(--font-color)">Gil Young Cho</a>, and <a href="https://sites.google.com/view/egmoon/" style="text-decoration:none;color:var(--font-color)">Eun-Gook Moon</a><br><a href="https://doi.org/10.1103/PhysRevB.95.094502">Phys. Rev. B <b>95</b>, 094502 (2017)</a> (<a href="https://arxiv.org/abs/1601.00975">arXiv:1601.00975</a>)</div>
 <!--		<span id="quicksummary1" style="CURSOR: hand" onclick="if(expla1.style.display=='none') {expla1.style.display='';quicksummary1.innerText='close quick summary'} else {expla1.style.display='none';quicksummary1.innerText='open quick summary'}">open quick summary</span><div id="expla1" style="display: none;"><hr>We study the topological phase transition accompanied by the change in the topological nodal structure. The nodal fermionic excitation induces a novel universality class which is characterized by the hyperscaling violation, emergent relativistic scale, and large anomalous dimensions. We propose that the unusual linear phase boundary as a signal of the underlying line-nodal fermions.<hr></div>-->
 		</li><li><div>
 			
@@ -168,7 +168,7 @@ Articles related to my works:
 		<span class="cvperiod">March 2013 ~ August 2020</span>
 		</div>
 		<div class="cvitemcontent"> Doctor of Philosophy in Physics</div>
-		<div class="cvitemcontent"> Thesis Adviosr: <a href="https://sites.google.com/view/egmoon" style="text-decoration:none;color:black">Prof. Eun-Gook Moon</a></div>
+		<div class="cvitemcontent"> Thesis Adviosr: <a href="https://sites.google.com/view/egmoon" style="text-decoration:none;color:var(--font-color)">Prof. Eun-Gook Moon</a></div>
 		<div class="cvitemcontent"> Thesis: Renormalization group study on Strongly correlated system</div>
 		<!--<div class="cvitemcontent"> Cumulative GPA : 4.16/4.3</div>-->
 		</li><li>
