--- a/arxiv/2022_09_arxiv.html
+++ b/arxiv/2022_09_arxiv.html
@@ -11,7 +11,7 @@
 <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="762022_09_arxiv.htmlx76" href="/apple-icon-76x76.png">
 <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
 <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
 <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
@@ -32,7 +32,8 @@
 <script src="../scripts.js"></script>
 
 </head>
-<body style="background-color:#EFEFEF">
+<body>
+
 
 <div id="center">
 
