--- a/last.html
+++ b/last.html
@@ -35,8 +35,8 @@
 
 </head>
 
-<body style="background-color:#FFFFFF">
 
+<body style="background-color: var(--bg-color)">
 <div id="center">
 
 <div style="font-size:75%" id="lastcenter">since 2014-12-31 / last update 2022-09-30</div>
