--- a/arxiv/2022_10_arxiv.html
+++ b/arxiv/2022_10_arxiv.html
@@ -44,6 +44,40 @@
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
 <p class="p1">20221003</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.15381">https://arxiv.org/abs/2209.15381</a></span> Topological Matter and Fractional Entangled Geometry *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.15023">https://arxiv.org/abs/2209.15023</a></span> Vortexability: A Unifying Criterion for Ideal Fractional Chern Insulators ***** (Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.15386">https://arxiv.org/abs/2209.15386</a></span> On the resurgence of renormalons in integrable theories ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.08798">https://arxiv.org/abs/2203.08798</a></span> Scaling dimension of Cooper pair operator from the black hole interior (Sang-Jin Sin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2106.11152">https://arxiv.org/abs/2106.11152</a></span> The Black Hole Firewall Transformation and Realism in Quantum Mechanics (Gerard ’t Hooft)</p>
+<p class="p2"><br></p>
+<p class="p1">20221004</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.00351">https://arxiv.org/abs/2210.00351</a></span> Quantum transport in dispersionless electronic bands</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.00023">https://arxiv.org/abs/2210.00023</a></span> Non-uniform vestigial charge-4e phase in the Kagome superconductor CsV3Sb5</p>
+<p class="p2"><br></p>
+<p class="p1">20221005</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.01135">https://arxiv.org/abs/2210.01135</a></span> Symmetry Enriched c-Theorems &amp; SPT Transitions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.01695">https://arxiv.org/abs/2210.01695</a></span> Keldysh Wormholes and Anomalous Relaxation in the Dissipative Sachdev-Ye-Kitaev Model ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.01646">https://arxiv.org/abs/2210.01646</a></span> An emerging global picture of heavy fermion physics ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.01682">https://arxiv.org/abs/2210.01682</a></span> Quantum circuits for toric code and X-cube fracton model ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.01399">https://arxiv.org/abs/2210.01399</a></span> Quantum-geometry-induced anapole superconductivity ***** (Youichi Yanase)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2205.02285">https://arxiv.org/abs/2205.02285</a></span> Statistical mechanics of strange metals and black holes ***** (Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.06567">https://arxiv.org/abs/2204.06567</a></span> Analogue viscous current flow near the onset of superconductivity *** (Andrew Lucas)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.12097">https://arxiv.org/abs/2111.12097</a></span> Topological characterization of Lieb-Schultz-Mattis constraints and applications to symmetry-enriched quantum criticality ***** (Weicheng Ye, Meng Guo, Yin-Chen He, Chong Wang, Liujun Zou)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2103.05335">https://arxiv.org/abs/2103.05335</a></span> Floquet scattering of quadratic band-touching semimetals through a time-periodic potential well (Ipsita Mandal)</p>
+<p class="p2"><br></p>
+<p class="p1">20221006</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.02427">https://arxiv.org/abs/2210.02427</a></span> Absence of Operator Growth in the Sachdev–Ye–Kitaev Model for Average Equal-Time Observables *** (Philipp Hauke)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.02444">https://arxiv.org/abs/2210.02444</a></span> Anomaly of (2 + 1)-Dimensional Symmetry-Enriched Topological Order from (3 + 1)-Dimensional Topological Quantum Field Theory ***** (Weicheng Ye, Liujun Zou)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.02320">https://arxiv.org/abs/2210.02320</a></span> Particle zoo in a doped spin chain: Correlated states of mesons and magnons</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.01996">https://arxiv.org/abs/2210.01996</a></span> A quantum spin liquid phase in the Kitaev-Hubbard model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.01830">https://arxiv.org/abs/2210.01830</a></span> Exceptional van Hove Singularities in Pseudogapped Metals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.01847">https://arxiv.org/abs/2210.01847</a></span> Dualities between fermionic theories and the Potts model ***</p>
+<p class="p2"><br></p>
+<p class="p1">20221007</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.02459">https://arxiv.org/abs/2210.02459</a></span> Scattering theory of delicate topological insulators (Taylor L. Hughes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.02470">https://arxiv.org/abs/2210.02470</a></span> Dipole condensates in tilted Bose-Hubbard chains ***** (Ethan Lake, Hyun-Yong Lee, Jung Hoon Han, T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.02530">https://arxiv.org/abs/2210.02530</a></span> Fractional Statistics ***** (Frank Wilczek)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.15244">https://arxiv.org/abs/2209.15244</a></span> Flavor Hierarchy from Smooth Confinement (Juven Wang)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
