--- a/arxiv/2022_10_arxiv.html
+++ b/arxiv/2022_10_arxiv.html
@@ -77,7 +77,108 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.02459">https://arxiv.org/abs/2210.02459</a></span> Scattering theory of delicate topological insulators (Taylor L. Hughes)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.02470">https://arxiv.org/abs/2210.02470</a></span> Dipole condensates in tilted Bose-Hubbard chains ***** (Ethan Lake, Hyun-Yong Lee, Jung Hoon Han, T. Senthil)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.02530">https://arxiv.org/abs/2210.02530</a></span> Fractional Statistics ***** (Frank Wilczek)</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.15244">https://arxiv.org/abs/2209.15244</a></span> Flavor Hierarchy from Smooth Confinement (Juven Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.15244">https://arxiv.org/abs/2209.15244</a></span> Flavor Hierarchy from Smooth Confinement (Juven Wang)</p><br>
+<p class="p1">20221010</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.03681">https://arxiv.org/abs/2210.03681</a></span> Classification of Fermionic Topological Orders from Congruence Representations ***** (Gil Young Cho, Hee-Cheol Kim, Donghae Seo, Minyoung You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.03127">https://arxiv.org/abs/2210.03127</a></span> Lifshitz gauge duality ***** (Leo Radzihovsky)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.03511">https://arxiv.org/abs/2210.03511</a></span> Topological states of matter in frustrated quantum magnetism</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.03727">https://arxiv.org/abs/2210.03727</a></span> Gapped Lineon and Fracton Models on Graphs (Pranay Gorantla, Ho Tat Lam, Nathan Seiberg, Shu-Heng Shao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.09254">https://arxiv.org/abs/2209.09254</a></span> Pair density wave order from electron repulsion ***** (Yi-Ming Wu,Aavishkar A. Patel, S. Raghu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.01213">https://arxiv.org/abs/2206.01213</a></span> Correlated metals and unconventional superconductivity in rhombohedral trilayer graphene: a renormalization group analysis ***** (Da-Chuan Lu, Shubhayu Chatterjee, Yi-Zhuang You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.14994">https://arxiv.org/abs/2206.14994</a></span> Spin Susceptibility of a J = 3/2 Superconductor ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.09146">https://arxiv.org/abs/2107.09146</a></span> Is the continuum SSH model topological? ****</p>
+<p class="p2"><br></p>
+<p class="p1">20221011</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.03946">https://arxiv.org/abs/2210.03946</a></span> A Concrete Example of Fractional Chern Insulator</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.04272">https://arxiv.org/abs/2210.04272</a></span> Caution on Gross-Neveu criticality with a single Dirac cone: Violation of locality and its consequence of unexpected finite-temperature transition *** (Zi Yang Meng, Yang Qi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.04093">https://arxiv.org/abs/2210.04093</a></span> Dynamical quantum phase transitions in SYK Lindbladians ***** (Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.04237">https://arxiv.org/abs/2210.04237</a></span> DMRG study of the higher-charge Schwinger model and its ’t Hooft anomaly ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.04046">https://arxiv.org/abs/2210.04046</a></span> Charge order and emergent symmetries in cuprate superconductors ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.10475">https://arxiv.org/abs/2207.10475</a></span> Emergent space-time meets emergent quantum phenomena ***** (Jinwu Ye)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.14917">https://arxiv.org/abs/2203.14917</a></span> Hybrid rank-1 and rank-2 U(1) lattice gauge theory, the F3 model, and its effective field theory ***** (Jintae Kim, Yun-Tak Oh, Jung Hoon Han)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.05480">https://arxiv.org/abs/2203.05480</a></span> Pair-density-wave and chiral superconductivity in twisted bilayer transition-metal-dichalcogenides (Yi-Ming Wu, Hong Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1912.11106">https://arxiv.org/abs/1912.11106</a></span> Soluble limit and criticality of fermions in Z2 gauge theories ***** (Elio J. Ko ̈nig, Piers Coleman, Alexei M. Tsvelik)</p>
+<p class="p2"><br></p>
+<p class="p1">20221012</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.05024">https://arxiv.org/abs/2210.05024</a></span> Fractional Topology in interacting 1D Superconductors</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.04937">https://arxiv.org/abs/2210.04937</a></span> Z3 parafermion in the double charge-Kondo model *****</p>
+<p class="p2"><br></p>
+<p class="p1">20221013</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.06072">https://arxiv.org/abs/2210.06072</a></span> Why Calculate in Infinite Dimensions?</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.06372">https://arxiv.org/abs/2210.06372</a></span> Stacking-induced magnetic frustration and spiral spin liquid (Gang Chen)</p>
+<p class="p2"><br></p>
+<p class="p1">20221014</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.06480">https://arxiv.org/abs/2210.06480</a></span> Field theory approach to eigenstate thermalization in random quantum circuits *** (Victor Galitski)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.06762">https://arxiv.org/abs/2210.06762</a></span> A Non-Unitary Conformal Field Theory Approach to Two-Dimensional Turbulence *** (Jinwu Ye)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.06805">https://arxiv.org/abs/2210.06805</a></span> On Classification of Fermionic Rational Conformal Field Theories ** (Kimyeong Lee, Sungjay Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.06641">https://arxiv.org/abs/2210.06641</a></span> Dynamical Effects from Anomaly: Modified Electrodynamics in Weyl Semimetal **** (A. A. Burkov, Chong Wang)</p>
+<p class="p2"><br></p>
+<p class="p1">20221017</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.07256">https://arxiv.org/abs/2210.07256</a></span> Measurement-induced phases of matter require adaptive dynamics *** (Rahul Nandkishore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.07569">https://arxiv.org/abs/2210.07569</a></span> Theory of Energy Dispersion of Chiral Phonons</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.07254">https://arxiv.org/abs/2210.07254</a></span> Correlated insulating states in carbon nanotubes controlled by magnetic field *** (Yuval Oreg, Erez Berg)</p>
+<p class="p2"><br></p>
+<p class="p1">20221018</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.08025">https://arxiv.org/abs/2210.08025</a></span> Strong correlations in ABC-stacked trilayer graphene: Moir ́e is important ***** (Adarsh S. Patri, T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.09282">https://arxiv.org/abs/2210.09282</a></span> Graph gauge theory of mobile non-Abelian anyons in a qubit stabilizer code ***** (Eun-Ah Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.08048">https://arxiv.org/abs/2210.08048</a></span> Probing Fermi sea topology by Andreev state transport (Pok Man Tam, Charles L. Kane)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.09465">https://arxiv.org/abs/2207.09465</a></span> Emergent Quantum Mechanics at the Boundary of a Local Classical Lattice Model *** (Kevin Slagle, John Preskill)</p>
+<p class="p2"><br></p>
+<p class="p1">20221019</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.09326">https://arxiv.org/abs/2210.09326</a></span> Pseudo-spin order of Wigner crystals in multi-valley electron gases *** (Steven A. Kivelson, Erez Berg)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.10025">https://arxiv.org/abs/2210.10025</a></span> RKKY interaction in one-dimensional flat band lattices</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/1801.07620">https://arxiv.org/abs/1801.07620</a></span> Circuit Complexity in Fermionic Field Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.09777">https://arxiv.org/abs/2210.09777</a></span> Poor man’s approach to thermalization in Luttinger liquid ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.09314">https://arxiv.org/abs/2210.09314</a></span> The Gauge Picture of Quantum Dynamics ***** (Kevin Slagle)</p>
+<p class="p2"><br></p>
+<p class="p1">20221020</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.10740">https://arxiv.org/abs/2210.10740</a></span> Magnetic wallpaper Dirac fermions and topological magnetic Dirac insulators ***** (Yoonseok Hwang, Bohm-Jung Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.10277">https://arxiv.org/abs/2210.10277</a></span> Renormalization group flow to effective quantum mechanics at IR in an emergent dual holographic description for spontaneous chiral symmetry breaking ***** (Ki-Seok Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.01279">https://arxiv.org/abs/2204.01279</a></span> Effective Field Theory of Dipolar Braiding Statistics in Two Dimensions **** (Yun-Tak Oh, Jintae Kim, Jung Hoon Han)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2210.10623">https://arxiv.org/abs/2210.10623</a><span class="s2"> Mythos in Fundamental Physics</span></p>
+<p class="p2"><br></p>
+<p class="p1">20221021</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.10856">https://arxiv.org/abs/2210.10856</a></span> Lindblad master equation approach to the topological phase transition in the disordered Su-Schrieffer-Heeger model ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.10866">https://arxiv.org/abs/2210.10866</a></span> Berezinskii-Kosterlitz-Thouless phase transition with Rabi coupled bosons ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.11001">https://arxiv.org/abs/2210.11001</a></span> Foliated-Exotic Duality in Fractonic BF Theories ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.10846">https://arxiv.org/abs/2210.10846</a></span> Solvable Models of Quantum Black Holes: A Review on Jackiw-Teitelboim Gravity</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.11072">https://arxiv.org/abs/2210.11072</a></span> Fractonic Luttinger Liquids and Supersolids in a Constrained Bose-Hubbard Model ***** (Ehud Altman, Michael Knap)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.02470">https://arxiv.org/abs/2210.02470</a></span> Dipole condensates in tilted Bose-Hubbard chains ***** (Ethan Lake, Hyun-Yong Lee, Jung Hoon Han, T. Senthil)</p>
+<p class="p2"><br></p>
+<p class="p1">20221024</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.11492">https://arxiv.org/abs/2210.11492</a></span> Emergent higher-form symmetry in Higgs phases with superfluidity</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.12151">https://arxiv.org/abs/2210.12151</a></span> Quantum Gauge Networks: A New Kind of Tensor Network *** (Kevin Slagle)</p>
+<p class="p2"><br></p>
+<p class="p1">20221025</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.12370">https://arxiv.org/abs/2210.12370</a></span> Evidence for 3d bosonization from monopole operators ** (William Witczak-Krempa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.12349">https://arxiv.org/abs/2210.12349</a></span> Shift symmetries and duality web in gauge theories **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.13123">https://arxiv.org/abs/2210.13123</a></span> On SYK traversable wormhole with imperfectly correlated disorders</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.12248">https://arxiv.org/abs/2210.12248</a></span> Electrodynamics of superconductors</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.11573">https://arxiv.org/abs/2210.11573</a></span> Real space representation of topological system: twisted bilayer graphene as an example (Jennifer Cano, Andrew J. Millis)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.06001">https://arxiv.org/abs/2208.06001</a></span> Hamilton Principle for Chiral Anomalies in Hydrodynamics (P.B. Wiegmann)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.11681">https://arxiv.org/abs/2201.11681</a></span> Resonant thermal Hall effect of phonons coupled to dynamical defects ***** (Haoyu Guoa, Darshan G. Joshia, Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2009.07273">https://arxiv.org/abs/2009.07273</a></span> On Exotic Consistent Anomalies in (1+1)d: A Ghost Story</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.12967">https://arxiv.org/abs/2210.12967</a></span> Fractional topological charge in lattice Abelian gauge theory</p>
+<p class="p2"><br></p>
+<p class="p1">20221026</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.13477">https://arxiv.org/abs/2210.13477</a></span> Exact Many-Body Ground States from Decomposition of Ideal Higher Chern Bands: Applications to Chirally Twisted Graphene Multilayers ***** (Junkai Dong, Patrick J. Ledwith, Eslam Khalaf, Jong Yeon Lee, Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.12436">https://arxiv.org/abs/2210.12436</a></span> Extremely Large Magnetoresistance and Anisotropic Transport in Multipolar Kondo System PrTi2Al20 ***** (Mingxuan Fu, Satoru Nakatsuji)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.14197">https://arxiv.org/abs/2210.14197</a></span> Extended Dynamical Mean Field Theory for Correlated Electron Models ***** (Haoyu Hu, Lei Chen, Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.14183">https://arxiv.org/abs/2210.14183</a></span> Quantum Critical Metals: Dynamical Planckian Scaling and Loss of Quasiparticles ***** (Haoyu Hu, Lei Chen, Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.13482">https://arxiv.org/abs/2210.13482</a></span> Uncovering conformal symmetry in the 3D Ising transition: State-operator correspondence from a fuzzy sphere regularization *** (Wei Zhu, Chao Han, Emilie Huffman, Johannes S. Hofmann, Yin-Chen He)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.13976">https://arxiv.org/abs/2210.13976</a></span> Double and Quadruple Flat Bands tuned by Alternative magnetic Fluxes in Twisted Bilayer Graphene</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2205.11571">https://arxiv.org/abs/2205.11571</a></span> Flat bands and band touching from real-space topology in hyperbolic lattices *** (Joseph Maciejko)</p>
+<p class="p2"><br></p>
+<p class="p1">20221027</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.14828">https://arxiv.org/abs/2210.14828</a></span> Charge transport, information scrambling and quantum operator-coherence in a many-body system with U(1) symmetry ***</p>
+<p class="p2"><br></p>
+<p class="p1">20221028</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.15596">https://arxiv.org/abs/2210.15596</a></span> Classification and construction of interacting fractonic higher-order topological phases **** (Meng Cheng, Zhen Bi)</p>
+<p class="p1"><a href="https://arxiv.org/abs/2210.10623">https://arxiv.org/abs/2210.10623</a> Mythos in Fundamental Physics</p>
+<p class="p2"><br></p>
+<p class="p1">20221031</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.16304">https://arxiv.org/abs/2210.16304</a></span> Fermi Surface Symmetric Mass Generation ***** (Da-Chuan Lu, Meng Zeng, Juven Wang, Yi-Zhuang You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.16293">https://arxiv.org/abs/2210.16293</a></span> Pair-Kondo effect: a mechanism for time-reversal broken superconductivity in UTe2 *****</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
